src/objects/Scripts_Stage_Product__c.object
<CustomObject>
	<fields>
        <fullName>MX_SB_VTS_OrigenOpp__c</fullName>
        <description>Origen de la Oportunidad, para diferenciar scripts de Inbound</description>
        <label>Origen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call me back</fullName>
                </value>
                <value>
                    <fullName>Tracking Web</fullName>
                </value>
                <value>
                    <fullName>SAC</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound TLMK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MX_WB_Etapa__c</fullName>
        <label>Etapa</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacto Efectivo</fullName>
                </value>
                <value>
                    <fullName>Objeciones</fullName>
                </value>
                <value>
                    <fullName>Políticas</fullName>
                </value>
                <value>
                    <fullName>Cotización</fullName>
                </value>
                <value>
                    <fullName>Objeciones Reales</fullName>
                </value>
                <value>
                    <fullName>Venta Autorizada</fullName>
                </value>
                <value>
                    <fullName>Apertura</fullName>
                </value>
                <value>
                    <fullName>Cierre llamada no contacto</fullName>
                </value>
                <value>
                    <fullName>Información y condiciones</fullName>
                </value>
                <value>
                    <fullName>Venta cerrada</fullName>
                </value>
                <value>
                    <fullName>Cierre de llamada sin venta</fullName>
                </value>
                <value>
                    <fullName>Contacto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_FamiliaProductos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Familia de productos a los que se les asociará el script</description>
        <label>Familia de productos</label>
        <referenceTo>MX_WB_FamiliaProducto__c</referenceTo>
        <relationshipLabel>Scripts Stages Products</relationshipLabel>
        <relationshipName>Scripts_Stages_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_Script__c</fullName>
        <description>Script que será mostrado al asesor. Este script se visualiza dependiendo la etapa y el producto en el que se encuentre.</description>
        <label>Script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Scripts Stage Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Scripts Stage Campaign</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scripts Stages Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>